manifests/base/resources/quotas/resources/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: quotas
    chart: quotas-1.0.3
    heritage: Helm
    release: quotas
  name: quotas
spec:
  replicas: 1
  selector:
    matchLabels:
      app: quotas
      release: quotas
  template:
    metadata:
      labels:
        app: quotas
        release: quotas
    spec:
      containers:
      - env:
        - name: KEYS_URI
          valueFrom:
            configMapKeyRef:
              key: keysUri
              name: quotas-configs
        - name: AUTH_JWKS_URI
          value: $(KEYS_URI)/v1/keys/qlik.api.internal
        - name: TOKEN_AUTH_PRIVATE_KEY
          valueFrom:
            secretKeyRef:
              key: tokenAuthPrivateKey
              name: quotas-secrets
        - name: SERVICE_JWT_PRIVATE_KEY
          value: $(TOKEN_AUTH_PRIVATE_KEY)
        - name: TOKEN_AUTH_PRIVATE_KEY_ID
          valueFrom:
            secretKeyRef:
              key: tokenAuthPrivateKeyId
              name: quotas-secrets
        - name: SERVICE_JWT_KEY_ID
          value: $(TOKEN_AUTH_PRIVATE_KEY_ID)
        - name: TOKEN_AUTH_URI
          valueFrom:
            configMapKeyRef:
              key: tokenAuthUri
              name: quotas-configs
        - name: INTERNAL_TOKENS_URI
          value: $(TOKEN_AUTH_URI)/v1/internal-tokens
        - name: LICENSES_URI
          valueFrom:
            configMapKeyRef:
              key: licensesUri
              name: quotas-configs
        - name: SPACES_URI
          valueFrom:
            configMapKeyRef:
              key: spacesUri
              name: quotas-configs
        - name: TERMINATION_GRACE_PERIOD_SECONDS
          value: "30"
        - name: LOG_LEVEL
          value: debug
        - name: AUTH_ENABLED
          value: "true"
        - name: AUTH_JWT_AUD
          value: qlik.api.internal
        - name: AUTH_JWT_ISS
          value: qlik.api.internal
        - name: LICENSES_ENABLED
          value: "false"
        - name: SPACES_ENABLED
          value: "false"
        image: qlik-docker-qsefe.bintray.io/quotas:0.8.0
        imagePullPolicy: IfNotPresent
        livenessProbe:
          httpGet:
            path: /health
            port: 6080
        name: main
        ports:
        - containerPort: 6080
        readinessProbe:
          httpGet:
            path: /ready
            port: 6080
      imagePullSecrets:
      - name: artifactory-docker-secret
      terminationGracePeriodSeconds: 30
---
