manifests/base/resources/quotas/resources/service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    prometheus.io/port: "6080"
    prometheus.io/scrape: "true"
  labels:
    app: quotas
    chart: quotas-1.0.3
    heritage: Helm
    release: quotas
  name: quotas
spec:
  ports:
  - name: quotas
    port: 6080
    protocol: TCP
    targetPort: 6080
  selector:
    app: quotas
    release: quotas
  type: ClusterIP
---
