manifests/base/resources/quotas/resources/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/auth-response-headers: Authorization
    nginx.ingress.kubernetes.io/auth-url: http://quotas-edge-auth.$(NAMESPACE).svc.cluster.local:8080/v1/auth
    nginx.ingress.kubernetes.io/configuration-snippet: |
      rewrite (?i)/api/v1/(.*) /v1/$1 break;
    nginx.ingress.kubernetes.io/enable-cors: "true"
  labels:
    app: quotas
    chart: quotas-1.0.3
    heritage: Helm
    release: quotas
  name: quotas
spec:
  rules:
  - http:
      paths:
      - backend:
          serviceName: quotas
          servicePort: 6080
        path: /api/v1/quotas
---
